// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/VehicleResults/VehicleResult/ViolationsInspector/ViolationCardList/ViolationCardListControls/ShowFineDetailsButton ListVisibleAndFineDetailsAreNotVisible smoke-test 1`] = `
<div class="site-container-wrapper">
  <div class="site-container container-fluid">
    <main>
      <div class="row">
        <div class="col-md-12 vehicle-lookup-content-container new-style">
          <div class="vehicles new-style">
            <div class="vehicle card">
              <ul class="list-group-flush list-group">
                <li class="list-group-item">
                  <div class="violation-card-list-wrapper">
                    <div class="violation-card-list-controls">
                      <div class="row">
                        <div class="d-grid gap-2">
                          <button class="btn btn-block btn-outline-primary"
                                  type="button"
                          >
                            show fines details
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Components/VehicleResults/VehicleResult/ViolationsInspector/ViolationCardList/ViolationCardListControls/ShowFineDetailsButton ListVisibleAndFineDetailsAreVisible smoke-test 1`] = `
<div class="site-container-wrapper">
  <div class="site-container container-fluid">
    <main>
      <div class="row">
        <div class="col-md-12 vehicle-lookup-content-container new-style">
          <div class="vehicles new-style">
            <div class="vehicle card">
              <ul class="list-group-flush list-group">
                <li class="list-group-item">
                  <div class="violation-card-list-wrapper">
                    <div class="violation-card-list-controls">
                      <div class="row">
                        <div class="d-grid gap-2">
                          <button class="btn btn-block btn-outline-primary"
                                  type="button"
                          >
                            show fines summary
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;
